[project]
name = "swan-tools"
authors = [{ name = "Tomas Roun", email = "tomas.roun8@gmail.com" }]
description = "A collection of tools for developing SWAN"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["click==8.3.2"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/tomasr8/swan-tools"
GitHub = "https://github.com/tomasr8/swan-tools"

[project.scripts]
swan = "swan_tools.cli:cli"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "ANN"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.hatch.version]
path = "swan_tools/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["swan_tools"]

[build-system]
requires = ["hatchling==1.29.0"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["ruff==0.15.7"]
